[package]
name = "mcount"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
rust-htslib = { version = "*", default-features = false }
bio-types = { version = "1.0.0" }
msite = { git = "https://github.com/andrewdavidsmith/msite" }
